landing page, webservice call for locations

--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -9,7 +9,7 @@
                             <img src="resources/images/steps1.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Create an account and login</span>
+                            <span class="hd-content">Create an account and Login</span>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                             <img src="resources/images/steps3.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Pay the seller</span>
+                            <span class="hd-content">Pay the Rent</span>
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                             <img src="resources/images/steps4.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Enjoy your purchase</span>
+                            <span class="hd-content">Enjoy your Stay</span>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <input type="text" #username id="username" class="form-control input-custom-field" placeholder="Your Name"/>
-                                    <input type="text" #password id="password" class="form-control input-custom-field" placeholder="Your Password"/>
+                                    <input type="password" #password id="password" class="form-control input-custom-field" placeholder="Your Password"/>
                                 </div>
                             </div>
                             <div class="row">
@@ -141,39 +141,40 @@
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
-                <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
+                <h2 class="landing-page-footer-top-section-header">PROCESS</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
-                    <li><a>Buy and Sell</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a>Prices</a></li>
+                    <li><a>Places</a></li>
+                    <li><a>Near your city</a></li>
+                    <li><a>Auctions</a></li>
+                    <li><a>Pay</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
-                <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
+                <h2 class="landing-page-footer-top-section-header">SERVICE</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
-                    <li><a>Buy and Sell</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a>Partners</a></li>
+                    <li><a>Buy Houses</a></li>
+                    <li><a>Rent your place</a></li>
+                    <li><a>Find deals</a></li>
+                    <li><a>Compare Prices</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
-                <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
+                <h2 class="landing-page-footer-top-section-header">DEALS</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
-                    <li><a>Buy and Sell</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a>Payment</a></li>
+                    <li><a>Bidding</a></li>
+                    <li><a>Aceptance</a></li>
+                    <li><a>Cool Deals</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
-                <h2 class="landing-page-footer-top-section-header">QUICKLINKS</h2>
+                <h2 class="landing-page-footer-top-section-header">CONTACT</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>About</a></li>
-                    <li><a>Buy and Sell</a></li>
-                    <li><a>Find Out</a></li>
-                    <li><a>Search</a></li>
+                    <li><a>#RoomAuctionUK</a></li>
+                    <li><a>RoomAuctionUK</a></li>
+                    <li><a>RoomAuctionUK</a></li>
                 </ul>
             </div>
         </div>
