--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -1,4 +1,4 @@
-<div class="non-member-bg">
+<div class="search-box-layout-bg">
     <div class="steps">
         <div class="container">
             {{errorMsg}}
@@ -9,7 +9,7 @@
                             <img src="resources/images/steps1.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Create an account and Login</span>
+                            <span class="hd-content">Create an account</span> <br><span class="hd-content">and Login</span>
                         </div>
                     </div>
                 </div>
@@ -19,7 +19,7 @@
                             <img src="resources/images/steps2.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Bid and Win</span>
+                            <span class="hd-content">Bid and</span> <br><span class="hd-content">Win</span>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
                             <img src="resources/images/steps3.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Pay the Rent</span>
+                            <span class="hd-content">Pay the</span> <br><span class="hd-content">Rent</span>
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                             <img src="resources/images/steps4.png">
                         </div>
                         <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
-                            <span class="hd-content">Enjoy your Stay</span>
+                            <span class="hd-content">Enjoy your</span> <br><span class="hd-content">Stay</span>
                         </div>
                     </div>
                 </div>
@@ -172,9 +172,42 @@
             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 form-group" >
                 <h2 class="landing-page-footer-top-section-header">CONTACT</h2>
                 <ul class="landing-page-footer-top-section-ul">
-                    <li><a>#RoomAuctionUK</a></li>
-                    <li><a>RoomAuctionUK</a></li>
-                    <li><a>RoomAuctionUK</a></li>
+                    <li>
+                        <a>
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                                    <img src="resources/images/twitter-footer-icon.png">
+                                </div>
+                                <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
+                                    <span>#RoomAuctionUK</span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                                    <img src="resources/images/google-plus-footer-icon.png">
+                                </div>
+                                <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
+                                    <span>RoomAuctionUK</span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <div class="row">
+                                <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+                                    <img src="resources/images/facebook-footer-icon.png">
+                                </div>
+                                <div class="col-xs-8 col-sm-9 col-md-9 col-lg-9">
+                                    <span>RoomAuctionUK</span>
+                                </div>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
