--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <ul class="featured-ad-left-sidebar-ul">
+    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+        <ul class="featured-ad-left-sidebar-ul margin-top-95px">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
@@ -9,39 +9,61 @@
             <li><a>FAQ</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+
+    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <div class="row form-group">
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2 class="text-center">Account Settings of Featured Ad</h2>
+                </div>
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
-                <div class="row form-group">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3>Account Settings of Featured Ad</h3>
+                <form>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                            <h5 class="edit-profile-label">Default Bid Per Click</h5>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                            <div class="default-bid-per-click">
+                                <input id="default-bid-per-click" name="default-bid-per-click" type="number" class="form-control input-custom-field" value="{{accountSettingFA.defaultBidPerClick.amount}}"/> <span>{{accountSettingFA.defaultBidPerClick.currencyUnit.title}}</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                        <h5 class="edit-profile-label">Default Bid Per Click</h5>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                            <h5 class="edit-profile-label">Daily Budget</h5>
+                        </div>
+                        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                            <div class="daily-budget">
+                                <input id="daily-budget" name="daily-budget" type="number" class="form-control input-custom-field" value="{{accountSettingFA.dailyBudget.amount}}"/>  <span>{{accountSettingFA.dailyBudget.currencyUnit.title}}</span> 
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <h4>{{accountSettingFA.defaultBidPerClick.currencyUnit.title}}{{accountSettingFA.defaultBidPerClick.amount}}</h4>
-                    </div>
-                </div>
-                <div class="row form-group">
-                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                        <h5 class="edit-profile-label">Default Bid</h5>
-                    </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <h4>{{accountSettingFA.dailyBudget.amount}}{{accountSettingFA.dailyBudget.currencyUnit.title}}</h4>
-                    </div>
-                </div>
-                <div class="row form-group user-account-settings-compaign-status">
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <h5 class="edit-profile-label">Campaign Status</h5>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                        <p class="{{accountSettingFA.campainActive == true ?'fa-success':'fa-disable'}}"><i class="fa {{accountSettingFA.campainActive == true ?'fa-check':'fa-times'}}" aria-hidden="true"></i></p>
+                    <div class="row form-group user-account-settings-compaign-status">
+                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                            <h5 class="edit-profile-label">Campaign Status</h5>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                            <div class="radio-inline radio_inline">
+                                <input type="radio" name="user-account-settings-compaign-status" checked>
+                                <i class="fa fa-check" aria-hidden="true"></i> <span>Activated</span>
+                            </div>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                            <div class="radio-inline radio_inline">
+                                <input type="radio" name="user-account-settings-compaign-status">
+                                <i class="fa fa-times" aria-hidden="true"></i> <span>Deactivated</span>
+                            </div>
+                        </div>
+                        <!--<p class="{{accountSettingFA.campainActive == true ?'fa-success':'fa-disable'}}"><i class="fa {{accountSettingFA.campainActive == true ?'fa-check':'fa-times'}}" aria-hidden="true"></i></p>-->
                         <!--<p class="fa-disable"><i class="fa fa-times" aria-hidden="true"></i> </p>-->
                     </div>
-                </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                            <button id="account-settings-update-button" name="account-settings-update-button" class="common-custom-button">Update</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
