--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <ul class="featured-ad-left-sidebar-ul">
+    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+        <ul class="featured-ad-left-sidebar-ul margin-top-95px">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
@@ -9,45 +9,87 @@
             <li><a>FAQ</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h2 class="text-center">Individual Ad Bids</h2>
+    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+        <form>
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <h2 class="text-center">Individual Ad Bids</h2>
+                </div>
             </div>
-        </div>
-        <div class="row form-group">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <table class="individual-ad-bids-table">
-                    <thead>
-                        <tr>
-                            <th>Featured Add</th>
-                            <th>Title</th>
-                            <th>Location</th>
-                            <th>Default Bid</th>
-                            <th>Amount</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let product of productList">
-                            <td data-label="Featured Add">
-                                <p class="fa-success"><i class="fa fa-check" aria-hidden="true"></i></p>
-                                <!--<p class="fa-disable"><i class="fa fa-times" aria-hidden="true"></i> </p>-->
-                            </td>
-                            <td data-label="Title">{{product.title}}</td>
-                            <td data-label="Location">{{product.location.postCode}}</td>
-                            <td data-label="Default Bid">
-                                <p class="fa-success"><i class="fa fa-check" aria-hidden="true"></i></p>
-                                <!--<p class="fa-disable"><i class="fa fa-times" aria-hidden="true"></i> </p>-->
-                            </td>
-                            <td data-label="Amount">{{product.adBid.amount}}{{product.adBid.currencyUnit.title}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                    <h4>Featured Ad</h4>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
+                    <h4>Ad Title</h4>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                    <h4>Postcode</h4>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                    <h4>Ad Bids</h4>
+                </div>
             </div>
-        </div>
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="divider"></div>
+                </div>
+            </div>
+            <div class="row form-group individual-ad-bids-table" *ngFor="let product of productList">
+                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                            <div class="row ">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="radio-inline">
+                                        <input type="radio" name="featured-add-optradio-{{product.id}}" checked><span>Yes</span>
+                                    </div>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                    <div class="radio-inline">
+                                        <input type="radio" name="featured-add-optradio-{{product.id}}"><span>No</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
+                            <span>{{product.title}}</span>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2  form-group">
+                            <span>{{product.location.postCode}}</span>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                                <div class="radio-inline">
+                                    <input type="radio" name="ad-bids-optradio-{{product.id}}" checked><span>default({{product.adBid.amount}}{{product.adBid.currencyUnit.title}})</span>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                                <div class="radio-inline">
+                                    <input type="radio" name="ad-bids-optradio-{{product.id}}"><span>custom:</span>  <input id="custom-bid" name="custom-bid" type="number" value="{{product.adBid.amount}}"/> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="divider"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <button id="individual-ad-bids-update-button" name="individual-ad-bids-update-button" class="common-custom-button">Update</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
+
+
+
+
 <!--Individual Ad Bids
 <br/>product list<br/>
 ============================<br/>
