--- a/web/html_components/member/home/index.html
+++ b/web/html_components/member/home/index.html
@@ -1,28 +1,53 @@
-<div class="container">
-    <div class="row form-group">
-        <div class="col-xs-12 col-sm-offset-2 col-sm-7 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 form-group">
-            <div class="search-box-pagelet form-group">
-                <form role="form" (submit)="search($event, locationSelector.value)">
-                      <div class="row form-group">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h1 for="id" class="text-center home-page-search-box-header-text">Find your soltion</h1>
-                            <h3 for="id" class="text-center home-page-search-box-small-text">Search properties for sale and to rent</h3>
-                        </div>
-                    </div>
-                    <div class="row form-group">
-                        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 form-group">
-                            <div class="home-page-search-box-layout">
-                                <input class="form-control search-input-field" #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
-                                    [typeahead]="locationList"
-                                    typeaheadOptionField="searchString" />
+<div class="search-box-layout-bg">
+    <div class="container">
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-7 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 form-group">
+                <div class="search-box-pagelet form-group">
+                    <form role="form" (submit)="search($event, locationSelector.value)">
+                          <div class="row form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 form-group">
+                                <div class="landing-page-search-box-layout">
+                                    <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
+                                        [typeahead]="locationList"
+                                        typeaheadOptionField="searchString"
+                                        class="form-control search-input-field">
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                                <button type="submit" class="form-control common-custom-button non-member-search-input">Rent</button>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
-                            <button type="submit" class="form-control common-custom-button">Rent</button>
+                        <div class="row form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <h1 for="id" class="text-center landing-page-search-box-header-text">Find your solution</h1>
+                                <h3 for="id" class="text-center landing-page-search-box-small-text">Search properties for sale and to rent</h3>
+                            </div>
                         </div>
-                    </div>
-                </form> 
+                    </form> 
+                </div>
             </div>
         </div>
     </div>
 </div>
+<!--                <div class="search-box-pagelet form-group">
+    <form role="form" (submit)="search($event, locationSelector.value)">
+          <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h1 for="id" class="text-center home-page-search-box-header-text">Find your soltion</h1>
+                <h3 for="id" class="text-center home-page-search-box-small-text">Search properties for sale and to rent</h3>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 form-group">
+                <div class="home-page-search-box-layout">
+                    <input class="form-control search-input-field" #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
+                           [typeahead]="locationList"
+                           typeaheadOptionField="searchString" />
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+                <button type="submit" class="form-control common-custom-button">Rent</button>
+            </div>
+        </div>
+    </form> 
+</div>-->
