--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3 class="product-info-details-left-panel-location">{{product.location_type}}</h3>
+                        <h3 class="product-info-details-left-panel-location"></h3>
                     </div>
                 </div>
             </div>
