--- a/web/html_components/public/basicsearch.html
+++ b/web/html_components/public/basicsearch.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h1 class="basic-search-header">Basic Search</h1>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <h1 class="text-center basic-search-header">Basic Search</h1>
         </div>
     </div>
     <div class="row form-group">
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
             <h3 class="basic-search-selection-title">Search Location</h3>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
@@ -16,15 +16,17 @@
                     class="form-control search-input-field" placeholder="Search for Location">
             </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
             <h3 class="basic-search-selection-title">Radius</h3>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <select class="form-control select-custom-field">
                 <option *ngFor="let radius of radiusList" value="{{radius.title}}"><a id="{{radius.id}}">{{radius.title}}</a></option>
             </select> 
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+    </div>
+    <div class="row form-group">
+        <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
             <h3 class="basic-search-selection-title">Property Type</h3>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
