--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <ul class="profile-left-sidebar-ul">
+    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
+        <ul class="profile-left-sidebar-ul margin-top-align">
             <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
             <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 form-group">
         <div class="user-profile-dashboard-header-layout">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
