--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-        <ul class="featured-ad-left-sidebar-ul margin-top-95px">
+    <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
+        <ul class="featured-ad-left-sidebar-ul featured-ad-left-sidebar-margin-top-align">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
@@ -10,7 +10,7 @@
         </ul>
     </div>
 
-    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+    <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row form-group">
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
