--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-        <ul class="featured-ad-left-sidebar-ul margin-top-95px">
+        <ul class="featured-ad-left-sidebar-ul featured-ad-left-sidebar-margin-top-align">
             <li><a class="active" [routerLink]="['/accountsettings']" (click)="accountsettings($event)">Account Settings</a></li>
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
