--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -9,12 +9,12 @@
             <div class="row form-group">
                 <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 form-group">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a href="#step1" data-toggle="tab">Step 1</a></li>
-                        <li><a href="#step2" data-toggle="tab">Step 2</a></li>
-                        <li><a href="#step3" data-toggle="tab">Step 3</a></li>
-                        <li><a href="#step4" data-toggle="tab">Step 4</a></li>
-                        <li><a href="#step5" data-toggle="tab">Step 5</a></li>
-                        <li><a href="#step6" data-toggle="tab">Step 6</a></li>
+                        <li class="active"><a href="#step1" data-toggle="tab">STEP 1</a></li>
+                        <li><a href="#step2" data-toggle="tab">STEP 2</a></li>
+                        <li><a href="#step3" data-toggle="tab">STEP 3</a></li>
+                        <li><a href="#step4" data-toggle="tab">STEP 4</a></li>
+                        <li><a href="#step5" data-toggle="tab">STEP 5</a></li>
+                        <li><a href="#step6" data-toggle="tab">STEP 6</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
@@ -52,6 +52,11 @@
                                             </select>
                                         </div>
                                     </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+                                            <button id="step1" name="step1" class="form-control common-custom-button">Next Step</button>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="tab-pane" id="step2">
                                     <div class="row form-group">
@@ -74,6 +79,11 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+                                            <button id="step2" name="step2" class="form-control common-custom-button">Next Step</button>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="tab-pane" id="step3">
                                     <div class="row form-group">
@@ -94,6 +104,11 @@
                                             <select class="form-control select-custom-field">
                                                 <option *ngFor="let maxStay of maxStayList" value="{{maxStay.title}}"><a id="{{maxStay.id}}">{{maxStay.title}}</a></option>
                                             </select>
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+                                            <button id="step3" name="step3" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -126,6 +141,11 @@
                                             <select class="form-control select-custom-field">
                                                 <option *ngFor="let pet of petList" value="{{pet.title}}"><a id="{{pet.id}}">{{pet.title}}</a></option>
                                             </select>
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+                                            <button id="step4" name="step4" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
@@ -163,6 +183,11 @@
                                         </div>
                                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                                             <input class="form-control input-custom-field" name="displayCellNo" value="{{product.displayCellNo}}" placeholder="Telephone" type="text"/>
+                                        </div>
+                                    </div>
+                                    <div class="row form-group">
+                                        <div class="col-xs-12 col-sm-offset-8 col-sm-4 col-md-offset-8 col-md-4 col-lg-offset-8 col-lg-4">
+                                            <button id="step5" name="step5" class="form-control common-custom-button">Next Step</button>
                                         </div>
                                     </div>
                                 </div>
