clients feedback of nonmember & member design

--- a/web/html_components/member/featuredad/accountsettings.html
+++ b/web/html_components/member/featuredad/accountsettings.html
@@ -12,16 +12,16 @@
 
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
         <div class="row form-group">
-            <div class="row form-group">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="text-center">Account Settings of Featured Ad</h2>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+                <h2 class="featured-ad-heading">Account Settings of Featured Ad</h2>
             </div>
+        </div>
+        <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
                 <form>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                            <h5 class="edit-profile-label">Default Bid Per Click</h5>
+                            <h5 class="featured-ad-label">Default Bid Per Click</h5>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="default-bid-per-click">
@@ -31,7 +31,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                            <h5 class="edit-profile-label">Daily Budget</h5>
+                            <h5 class="featured-ad-label">Daily Budget</h5>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="daily-budget">
@@ -41,7 +41,7 @@
                     </div>
                     <div class="row form-group user-account-settings-compaign-status">
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            <h5 class="edit-profile-label">Campaign Status</h5>
+                            <h5 class="featured-ad-label">Campaign Status</h5>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
                             <div class="radio-inline radio_inline">
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
-                            <div class="radio-inline radio_inline">
+                            <div class="radio-inline radio_inline pull-right">
                                 <input type="radio" name="user-account-settings-compaign-status">
                                 <i class="fa fa-times" aria-hidden="true"></i> <span>Deactivated</span>
                             </div>
@@ -59,8 +59,8 @@
                         <!--<p class="fa-disable"><i class="fa fa-times" aria-hidden="true"></i> </p>-->
                     </div>
                     <div class="row form-group">
-                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                            <button id="account-settings-update-button" name="account-settings-update-button" class="common-custom-button">Update</button>
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                            <button id="account-settings-update-button" name="account-settings-update-button" class="common-custom-button pull-right">Update</button>
                         </div>
                     </div>
                 </form>
