--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-        <ul class="dashboard-left-sidebar-ul">
+         <ul class="dashboard-left-sidebar-ul margin-top-align">
             <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
             <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
             <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
