--- a/web/html_components/member/profile/editprofile.html
+++ b/web/html_components/member/profile/editprofile.html
@@ -11,7 +11,7 @@
             <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3 class="text-center">Edit Your Profile</h3>
+                        <h3 class="edit-profile-heading">Edit Your Profile</h3>
                     </div>
                 </div>
                 <div class="row form-group">
