--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -7,7 +7,7 @@
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 form-group">
-        <div class="user-profile-dashboard-header-layout">
+        <div class="user-profile-dashboard-header-layout margin-top-align">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                     <h3 class="user-profile-dashboard-header">User Profile</h3>
