--- a/web/html_components/public/bid.html
+++ b/web/html_components/public/bid.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row">
                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                        <span class="bid-history-product-item-price-title">Item Price: </span>
+                        <h3 class="bid-history-product-item-price-title">Item Price: </h3>
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <h2 class="bid-history-product-item-price-content">{{product.price}}</h2>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="row">
                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                        <span class="bid-history-product-item-price-title">Item number: </span>
+                        <h3 class="bid-history-product-item-price-title">Item number: </h3>
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <h2 class="bid-history-product-item-price-content">{{product.id}}</h2>
