--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -12,10 +12,10 @@
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <form>
             <div class="row form-group">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <h2 class="text-center">Individual Ad Bids</h2>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <h2 class="featured-ad-heading">Individual Ad Bids</h2>
             </div>
+        </div>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                     <h4>Featured Ad</h4>
@@ -79,8 +79,8 @@
                 </div>
             </div>
             <div class="row form-group">
-                <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                    <button id="individual-ad-bids-update-button" name="individual-ad-bids-update-button" class="common-custom-button">Update</button>
+                <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12">
+                    <button id="individual-ad-bids-update-button" name="individual-ad-bids-update-button" class="common-custom-button pull-right">Update</button>
                 </div>
             </div>
         </form>
