--- a/web/html_components/member/manageproduct/index.html
+++ b/web/html_components/member/manageproduct/index.html
@@ -1,6 +1,10 @@
 <div class="row form-group">
     <div class="col-xs-12 col-sm-12 col-md-offset-3 col-md-9 col-lg-offset-3 col-lg-9">
-        <h3 class="text-center">Create Your Advertise</h3>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+                <h3 class="create-ad-heading">Create Your Advertise</h3>
+            </div>
+        </div>
     </div>
 </div>
 <div class="row">
