--- a/web/html_components/member/profile/uploadimg.html
+++ b/web/html_components/member/profile/uploadimg.html
@@ -1,13 +1,21 @@
 <div class="row">
      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-        <ul class="profile-left-sidebar-ul">
+        <ul class="profile-left-sidebar-ul margin-top-align">
             <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
             <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
             <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-        Upload profile Picture here
+         <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <h3 class="edit-profile-heading"> Upload profile Picture here</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
