--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -5,8 +5,8 @@
             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
             <li><a>Payment</a></li>
             <li><a [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
-            <li><a>Ranking</a></li>
-            <li><a>FAQ</a></li>
+            <li><a [routerLink]="['/ranking']" (click)="ranking($event)">Ranking</a></li>
+            <li><a [routerLink]="['/faq']" (click)="faq($event)">FAQ</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
